(library
 (name capstone)
 (public_name capstone)
 (flags :standard -linkall)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names ocaml)
  (flags
   :standard
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
