# Copyright © 2024 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: BSD-3

[project]
name = "py_cstest"
version = "0.1.0"
dependencies = [
  "pyyaml >= 6.0.2",
  "capstone >= 5.0.0",
]
requires-python = ">= 3.8"

[tool.setuptools]
packages = ["py_cstest"]
package-dir = {"" = "src"}

[project.scripts]
py_cstest = "py_cstest.cstest:main"
